{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 46,
  "lineage": "f59443e0-d259-9a4a-5003-523530575285",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6927ccef429da8c",
            "arn": "arn:aws:ec2:us-east-1:055962463891:instance/i-00158677802865fad",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "private_profile",
            "id": "i-00158677802865fad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd6319ce308542ab",
            "private_dns": "ip-10-0-1-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c1632840934cdd4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02db105fae8a7ae8c",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecb1d6062a9a462c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.private_profile",
            "module.ec2.aws_iam_role.threetierrole",
            "module.ec2.data.aws_ami.aws_linux",
            "module.vpc.aws_security_group.Private_EC2",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6927ccef429da8c",
            "arn": "arn:aws:ec2:us-east-1:055962463891:instance/i-06bdac99c95defe3f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "private_profile",
            "id": "i-06bdac99c95defe3f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a70a259d322c34d",
            "private_dns": "ip-10-0-0-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.178",
            "public_ip": "3.90.223.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d7c9a7b9ead2c09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e86e510cf9ac5bb0",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098795437a3136a34"
            ]
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.private_profile",
            "module.ec2.aws_iam_role.threetierrole",
            "module.ec2.aws_instance.private_ec2",
            "module.ec2.data.aws_ami.aws_linux",
            "module.vpc.aws_security_group.Private_EC2",
            "module.vpc.aws_security_group.Public_EC2",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jumpser",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6927ccef429da8c",
            "arn": "arn:aws:ec2:us-east-1:055962463891:instance/i-025c8df14e2d513df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025c8df14e2d513df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a86f10e178860009",
            "private_dns": "ip-10-0-0-167.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.167",
            "public_ip": "3.80.179.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0724b927449894c2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e86e510cf9ac5bb0",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f24c471474a2d4d"
            ]
          },
          "dependencies": [
            "module.jumpser.data.aws_ami.aws_linux",
            "module.vpc.aws_security_group.bastion_host_sg",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.jumpser",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6927ccef429da8c",
            "arn": "arn:aws:ec2:us-east-1:055962463891:instance/i-0ad0f1b37810cbc9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad0f1b37810cbc9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030a324e049cbbc06",
            "private_dns": "ip-10-0-3-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.134",
            "public_ip": "3.238.145.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05eb3a7c21ddaab8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb075129241407a0",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f24c471474a2d4d"
            ]
          },
          "dependencies": [
            "module.jumpser.data.aws_ami.aws_linux",
            "module.vpc.aws_security_group.bastion_host_sg",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/external/807ab2cd33b113a5",
            "arn_suffix": "app/external/807ab2cd33b113a5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "external-1850383212.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/external/807ab2cd33b113a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "external",
            "preserve_host_header": false,
            "security_groups": [
              "sg-030472ef93cb55140"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cb075129241407a0"
              },
              {
                "subnet_id": "subnet-0e86e510cf9ac5bb0"
              }
            ],
            "subnets": [
              "subnet-0cb075129241407a0",
              "subnet-0e86e510cf9ac5bb0"
            ],
            "vpc_id": "vpc-0c5139cb645eb38b4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.External_LB",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/internal/33437e9497d7592a",
            "arn_suffix": "app/internal/33437e9497d7592a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-internal-323505981.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/internal/33437e9497d7592a",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ed2b864b0a082eba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02db105fae8a7ae8c"
              },
              {
                "subnet_id": "subnet-05e066f9525ca19e7"
              }
            ],
            "subnets": [
              "subnet-02db105fae8a7ae8c",
              "subnet-05e066f9525ca19e7"
            ],
            "vpc_id": "vpc-0c5139cb645eb38b4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.Internal_LB",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_subnet.private_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:listener/app/external/807ab2cd33b113a5/28c4b2b17ee4820b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PublicTargetGroup/420c2a0a213cd050",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:listener/app/external/807ab2cd33b113a5/28c4b2b17ee4820b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/external/807ab2cd33b113a5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.external_lb",
            "module.lb.aws_lb_target_group.public_tg",
            "module.vpc.aws_security_group.External_LB",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:listener/app/internal/33437e9497d7592a/343b469b45471535",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PrivateTargetGroup/56af9ea610789442",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:listener/app/internal/33437e9497d7592a/343b469b45471535",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:loadbalancer/app/internal/33437e9497d7592a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.internal_lb",
            "module.lb.aws_lb_target_group.private_tg",
            "module.vpc.aws_security_group.Internal_LB",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_subnet.private_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PrivateTargetGroup/56af9ea610789442",
            "arn_suffix": "targetgroup/PrivateTargetGroup/56af9ea610789442",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PrivateTargetGroup/56af9ea610789442",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "PrivateTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PublicTargetGroup/420c2a0a213cd050",
            "arn_suffix": "targetgroup/PublicTargetGroup/420c2a0a213cd050",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PublicTargetGroup/420c2a0a213cd050",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "PublicTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PrivateTargetGroup/56af9ea610789442-20230409155221620400000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PrivateTargetGroup/56af9ea610789442",
            "target_id": "i-00158677802865fad"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.private_profile",
            "module.ec2.aws_iam_role.threetierrole",
            "module.ec2.aws_instance.private_ec2",
            "module.ec2.data.aws_ami.aws_linux",
            "module.lb.aws_lb_target_group.private_tg",
            "module.vpc.aws_security_group.Private_EC2",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PublicTargetGroup/420c2a0a213cd050-2023040915525022030000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055962463891:targetgroup/PublicTargetGroup/420c2a0a213cd050",
            "target_id": "i-06bdac99c95defe3f"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.private_profile",
            "module.ec2.aws_iam_role.threetierrole",
            "module.ec2.aws_instance.private_ec2",
            "module.ec2.aws_instance.public_ec2",
            "module.ec2.data.aws_ami.aws_linux",
            "module.lb.aws_lb_target_group.public_tg",
            "module.vpc.aws_security_group.Private_EC2",
            "module.vpc.aws_security_group.Public_EC2",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07aba7fbb6aa3a986",
            "domain": "vpc",
            "id": "eipalloc-07aba7fbb6aa3a986",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-145-205-212.compute-1.amazonaws.com",
            "public_ip": "54.145.205.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08256d4ab9d76205d",
            "domain": "vpc",
            "id": "eipalloc-08256d4ab9d76205d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-166-105-115.compute-1.amazonaws.com",
            "public_ip": "54.166.105.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_threetier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:internet-gateway/igw-0831cfc04eb400cd1",
            "id": "igw-0831cfc04eb400cd1",
            "owner_id": "055962463891",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07aba7fbb6aa3a986",
            "connectivity_type": "public",
            "id": "nat-00545160572eeab57",
            "network_interface_id": "eni-06e2ac8eacd59d4c2",
            "private_ip": "10.0.0.112",
            "public_ip": "54.145.205.212",
            "subnet_id": "subnet-0e86e510cf9ac5bb0",
            "tags": {
              "Name": "nat_gat_1"
            },
            "tags_all": {
              "Name": "nat_gat_1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08256d4ab9d76205d",
            "connectivity_type": "public",
            "id": "nat-05f6c4b9302d6ef53",
            "network_interface_id": "eni-08a8af0e6aa9d5f44",
            "private_ip": "10.0.3.211",
            "public_ip": "54.166.105.115",
            "subnet_id": "subnet-0cb075129241407a0",
            "tags": {
              "Name": "nat_gat_2"
            },
            "tags_all": {
              "Name": "nat_gat_2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:route-table/rtb-0be9642e80abfab0a",
            "id": "rtb-0be9642e80abfab0a",
            "owner_id": "055962463891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00545160572eeab57",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Sub RT"
            },
            "tags_all": {
              "Name": "Private Sub RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_nat_gateway.nat_gat_1",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:route-table/rtb-082533f663746e4bb",
            "id": "rtb-082533f663746e4bb",
            "owner_id": "055962463891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05f6c4b9302d6ef53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Sub RT"
            },
            "tags_all": {
              "Name": "Private Sub RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_nat_gateway.nat_gat_2",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:route-table/rtb-0e9a9eef21f8dee14",
            "id": "rtb-0e9a9eef21f8dee14",
            "owner_id": "055962463891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0831cfc04eb400cd1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a37187ce56c3f873",
            "route_table_id": "rtb-0be9642e80abfab0a",
            "subnet_id": "subnet-02db105fae8a7ae8c"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_nat_gateway.nat_gat_1",
            "module.vpc.aws_route_table.private_nat_rt",
            "module.vpc.aws_subnet.private_sub_1",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033be5349514c0345",
            "route_table_id": "rtb-082533f663746e4bb",
            "subnet_id": "subnet-05e066f9525ca19e7"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_nat_gateway.nat_gat_2",
            "module.vpc.aws_route_table.private_nat_rt_1",
            "module.vpc.aws_subnet.private_sub_2",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef6e5e607154d50d",
            "route_table_id": "rtb-0e9a9eef21f8dee14",
            "subnet_id": "subnet-0e86e510cf9ac5bb0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_sub_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092c88bce9f0d4434",
            "route_table_id": "rtb-0e9a9eef21f8dee14",
            "subnet_id": "subnet-0cb075129241407a0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_threetier",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DBMS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-09b36a4a96b808d77",
            "description": "Allow DBMS Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b36a4a96b808d77",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DBMS Traffic Inbound",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "DBMS",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DBMS"
            },
            "tags_all": {
              "Name": "DBMS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "External_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-030472ef93cb55140",
            "description": "Allow External_LB Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030472ef93cb55140",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow External_LB Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "External_LB",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "External_LB"
            },
            "tags_all": {
              "Name": "External_LB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Internal_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-0ed2b864b0a082eba",
            "description": "Allow Internal_LB Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed2b864b0a082eba",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Internall_LB Traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "Internal_LB",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Internal_LB"
            },
            "tags_all": {
              "Name": "Internal_LB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-0ecb1d6062a9a462c",
            "description": "Allow Private_EC2 Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecb1d6062a9a462c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Private_EC2 Traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "Private_EC2",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private_EC2"
            },
            "tags_all": {
              "Name": "Private_EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-098795437a3136a34",
            "description": "Allow Public_EC2 Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098795437a3136a34",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Public_EC2 Traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public_EC2",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public_EC2"
            },
            "tags_all": {
              "Name": "Public_EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:security-group/sg-03f24c471474a2d4d",
            "description": "Allow SSH Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f24c471474a2d4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Bastion_host Traffic Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "bastion_host",
            "name_prefix": "",
            "owner_id": "055962463891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_host_sg"
            },
            "tags_all": {
              "Name": "bastion_host_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-02db105fae8a7ae8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02db105fae8a7ae8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet AZ1"
            },
            "tags_all": {
              "Name": "Private Subnet AZ1"
            },
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-05e066f9525ca19e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e066f9525ca19e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet AZ1"
            },
            "tags_all": {
              "Name": "Private Subnet AZ1"
            },
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_DB_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-08f3fc63e2a5cbce3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f3fc63e2a5cbce3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private DB Subnet AZ1"
            },
            "tags_all": {
              "Name": "Private DB Subnet AZ1"
            },
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_DB_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-04c5d17c2b2f76f44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c5d17c2b2f76f44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private DB Subnet AZ1"
            },
            "tags_all": {
              "Name": "Private DB Subnet AZ1"
            },
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-0e86e510cf9ac5bb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e86e510cf9ac5bb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet AZ1"
            },
            "tags_all": {
              "Name": "Public Subnet AZ1"
            },
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:subnet/subnet-0cb075129241407a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb075129241407a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055962463891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet AZ1"
            },
            "tags_all": {
              "Name": "Public Subnet AZ1"
            },
            "vpc_id": "vpc-0c5139cb645eb38b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.threetiervpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "threetiervpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055962463891:vpc/vpc-0c5139cb645eb38b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4182c136ac07969",
            "default_route_table_id": "rtb-048967f4ac5ce4698",
            "default_security_group_id": "sg-0e426b166fde51228",
            "dhcp_options_id": "dopt-0f52428eb6c652549",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5139cb645eb38b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048967f4ac5ce4698",
            "owner_id": "055962463891"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}